fixed extra space at top of welcome page

--- a/my-app/src/components/NearYou.css
+++ b/my-app/src/components/NearYou.css
@@ -9,11 +9,6 @@
     height: 100%;
   }
 
-  .welcome-box{
-    padding: 2% 0px 0px 0px;
-    background-color: #83d981;
-  }
-
   .title-info {
     padding-top: 0vh;
     padding-bottom: 2vh;
